# AppExample

./: CMakeLists.txt  LICENSE
CMake/: DeployQt5.cmake
Sources/: Main.cxx
Sources/Interface/: MainWindow.cxx  MainWindow.h  VTKOpenGLWidget.cxx  VTKOpenGLWidget.h
UI/: MainWindow.ui
